--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,50 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
+    <Button
+            android:id="@+id/tv_a"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:text="A"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="在A下方，与A左对齐"
+            app:layout_constraintTop_toBottomOf="@id/tv_a"
+            app:layout_constraintLeft_toLeftOf="@id/tv_a"
+            />
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="在A上方,与A居中对齐"
+            app:layout_constraintBottom_toTopOf="@id/tv_a"
+            app:layout_constraintLeft_toLeftOf="@id/tv_a"
+            app:layout_constraintRight_toRightOf="@id/tv_a"
+        />
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="在A右方,\n与A居中对齐"
+            app:layout_constraintLeft_toRightOf="@id/tv_a"
+            app:layout_constraintTop_toTopOf="@id/tv_a"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_a"
+        />
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="在A左方，\n与ABaseline对齐"
+            app:layout_constraintRight_toLeftOf="@id/tv_a"
+            app:layout_constraintBaseline_toBaselineOf="@id/tv_a"
+            />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
