--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,32 @@
         tools:context=".MainActivity">
 
     <Button
-            android:visibility="gone"
-            android:id="@+id/tv_a"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="A"
-            android:layout_marginLeft="20dp"
+            android:text="水平居中"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             tools:ignore="MissingConstraints" />
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="B"
-            app:layout_constraintLeft_toRightOf="@id/tv_a"
-            android:layout_marginLeft="20dp"
-            app:layout_goneMarginLeft="60dp"
+            android:text="垂直居中"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             tools:ignore="MissingConstraints" />
+
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="水平垂直居中"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            />
 
 
 
