--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,40 +6,64 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+
+        <Button
+                android:id="@+id/bt_200"
+                android:minWidth="200dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:text="最小宽度为200dp的"
+                tools:ignore="MissingConstraints" />
+
+
+ <Button
+         android:id="@+id/bt_matchparent"
+         android:layout_width="match_parent"
+         android:text="matchparent"
+         android:layout_height="wrap_content"
+         app:layout_constraintLeft_toLeftOf="parent"
+         app:layout_constraintRight_toRightOf="parent"
+         app:layout_constraintTop_toBottomOf="@id/bt_200"
+         />
+
+
     <Button
+            android:id="@+id/bt_openconstraint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="水平偏移30%"
-            android:visibility="gone"
-            app:layout_constraintHorizontal_bias="0.3"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintTop_toBottomOf="@id/bt_matchparent"
+            android:text="constraintwidth开启"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintWidth_min="300dp"
+        />
 
     <Button
+            android:id="@+id/bt_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="垂直偏移0.3"
-            app:layout_constraintVertical_bias="0.3"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:ignore="MissingConstraints" />
-
-
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="水平垂直偏移70%"
-            app:layout_constraintHorizontal_bias="0.7"
-            app:layout_constraintVertical_bias="0.7"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bt_openconstraint"
+            android:text="constraint关闭"
+            app:layout_constrainedWidth="false"
+            app:layout_constraintWidth_min="300dp"
+        />
 
-            />
-
-
-
+    <Button
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bt_close"
+            android:text="30%"
+            app:layout_constraintWidth_percent="0.3"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintHeight_default="percent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
