--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,64 +6,41 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-
-        <Button
-                android:id="@+id/bt_200"
-                android:minWidth="200dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:text="最小宽度为200dp的"
-                tools:ignore="MissingConstraints" />
-
-
- <Button
-         android:id="@+id/bt_matchparent"
-         android:layout_width="match_parent"
-         android:text="matchparent"
-         android:layout_height="wrap_content"
-         app:layout_constraintLeft_toLeftOf="parent"
-         app:layout_constraintRight_toRightOf="parent"
-         app:layout_constraintTop_toBottomOf="@id/bt_200"
-         />
-
-
     <Button
-            android:id="@+id/bt_openconstraint"
+            android:id="@+id/bt_a"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="A"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bt_matchparent"
-            android:text="constraintwidth开启"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintWidth_min="300dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintRight_toLeftOf="@+id/bt_b"
         />
 
     <Button
-            android:id="@+id/bt_close"
+            android:id="@+id/bt_b"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bt_openconstraint"
-            android:text="constraint关闭"
-            app:layout_constrainedWidth="false"
-            app:layout_constraintWidth_min="300dp"
-        />
+            android:text="B"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/bt_a"
+            app:layout_constraintRight_toLeftOf="@+id/bt_c"
+
+            />
 
     <Button
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bt_close"
-            android:text="30%"
-            app:layout_constraintWidth_percent="0.3"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintHeight_default="percent"
-        />
+            android:id="@+id/bt_c"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="C"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/bt_b"
+
+            />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
