--- a/app/src/main/res/layout/activity_ji_guang_tts.xml
+++ b/app/src/main/res/layout/activity_ji_guang_tts.xml
@@ -12,7 +12,7 @@
             android:background="@android:color/transparent"
             android:id="@+id/et_speak_content"
             android:hint="输入文字"
-            android:text="just kidding"
+            android:text="you have to fix this"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:layout_margin="15dp"
