--- a/app/src/main/res/layout/activity_kotlin_test.xml
+++ b/app/src/main/res/layout/activity_kotlin_test.xml
@@ -1,33 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
->
-   
+        android:layout_height="match_parent">
+
+
     <Button
-            android:id="@+id/bt_a"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:text="A"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="A"
-            app:layout_constraintHorizontal_bias="0.3"
-            app:layout_constraintVertical_bias="0.3"
-            />
-
+            android:id="@+id/bt_a"
+            tools:ignore="MissingConstraints" />
 
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="B"
-            app:layout_constraintCircle="@id/bt_a"
-            app:layout_constraintCircleRadius="100dp"
-            app:layout_constraintCircleAngle="60"
-            tools:ignore="MissingConstraints" />
+            android:text="Bdsfsdaflasjdfklasdjfklasdjffkdsajflkasdjfkljdksflajkldf"
+           app:layout_constrainedWidth="true"
+            app:layout_constraintLeft_toRightOf="@id/bt_a"
+            app:layout_constraintTop_toBottomOf="@id/bt_a"
+            app:layout_constraintRight_toRightOf="parent"
+
+            />
 
 
 
