--- a/app/src/main/res/layout/activity_kotlin_test.xml
+++ b/app/src/main/res/layout/activity_kotlin_test.xml
@@ -6,25 +6,18 @@
         android:layout_height="match_parent">
 
 
+
     <Button
-            android:layout_width="wrap_content"
+          android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="A"
+            android:text="C"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/bt_a"
-            tools:ignore="MissingConstraints" />
-
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Bdsfsdaflasjdfklasdjfklasdjffkdsajflkasdjfkljdksflajkldf"
-           app:layout_constrainedWidth="true"
-            app:layout_constraintLeft_toRightOf="@id/bt_a"
-            app:layout_constraintTop_toBottomOf="@id/bt_a"
-            app:layout_constraintRight_toRightOf="parent"
-
             />
+
 
 
 
