--- a/app/src/main/res/layout/activity_kotlin_test.xml
+++ b/app/src/main/res/layout/activity_kotlin_test.xml
@@ -6,17 +6,27 @@
         android:layout_height="match_parent">
 
 
+        <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="A"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/bt_b"
+                android:id="@+id/bt_a"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintHorizontal_weight="2"
+                />
 
-    <Button
-          android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:text="C"
-            app:layout_constraintDimensionRatio="H,2:1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+        <Button
+                android:id="@+id/bt_b"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="B"
+                app:layout_constraintLeft_toRightOf="@id/bt_a"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                />
+
 
 
 
